<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                             http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>io.github._13shoot</groupId>
    <artifactId>normie-progression</artifactId>
    <version>0.4.0-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>NormieProgression</name>
    <description>Core Progression System for Normie SMP</description>

    <!-- ================================================= -->
    <!-- Java / Build Properties                           -->
    <!-- ================================================= -->
    <properties>
        <java.version>21</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <!-- ================================================= -->
    <!-- Repositories (IMPORTANT)                          -->
    <!-- ================================================= -->
    <repositories>

        <!-- PaperMC Repository -->
        <repository>
            <id>papermc</id>
            <url>https://repo.papermc.io/repository/maven-public/</url>
        </repository>

        <!-- PlaceholderAPI Repository -->
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>

        <!-- Jitpack Repository -->
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>

    </repositories>

    <!-- ================================================= -->
    <!-- Dependencies                                     -->
    <!-- ================================================= -->
    <dependencies>

        <!-- Paper API -->
        <dependency>
            <groupId>io.papermc.paper</groupId>
            <artifactId>paper-api</artifactId>
            <version>1.21.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- PlaceholderAPI -->
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.5</version>
            <scope>provided</scope>
        </dependency>

         <!-- Vault API -->
        <dependency>
            <groupId>com.github.MilkBowl</groupId>
            <artifactId>Vault</artifactId>
            <version>1.7.3</version>
            <scope>provided</scope>
        </dependency>

    </dependencies>

    <!-- ================================================= -->
    <!-- Build Configuration                               -->
    <!-- ================================================= -->
    <build>
        <plugins>

            <!-- Java Compiler -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>

        </plugins>
    </build>

</project>
